onetimesecret/kustomize/base/onetimesecret-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: onetimesecret
    tier: frontend
  name: onetimesecret
  namespace: onetimesecret
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  selector:
    matchLabels:
      app: onetimesecret
      tier: frontend
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: onetimesecret
        tier: frontend
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - image: artifactory.silabs.net/platform-devops-docker/snappass-new:0.2
        name: onetimesecret
        ports:
          - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            memory: "256Mi"
            cpu: "500m"
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsGroup: 65534
          runAsNonRoot: true
          runAsUser: 65534

        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        livenessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
