onetimesecret/kustomize/base/onetimesecret-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onetimesecret-ingress
  namespace: onetimesecret
  annotations:
    argocd.argoproj.io/sync-wave: "6"
spec:
  ingressClassName: nginx
  rules:
  - host: onetimesecret-k8s.dev.silabs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: onetimesecret
            port:
              number: 80
